# distances

./: .gitignore  LICENSE  README.md  pyproject.toml
distances/: __init__.py  __version__.py
distances/cli/: __main__.py
distances/distance_computor/: hausdorff.py  minimal.py
tests/: distance_test.py
