[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "distances"
version = "0.1.0"
authors = [
  { name="Laura Miguel", email="miguellaura240@gmail.com" },
]
description = "First CLI"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "numpy",
  "scipy",
]

[project.scripts]
distance_computor = "distances.cli.__main__:main"
